<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_columnWeight="1"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        app:layout_rowWeight="1"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/img_budget"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/mov_data_runtime"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_view_budget"
                android:src="@drawable/ic_d_money_on_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/img_runtime" />

            <ImageView
                android:id="@+id/img_revenue"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/mov_data_budget"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_view_revenue"
                android:src="@drawable/ic_d_add_circle_outline_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/img_budget" />

            <ImageView
                android:id="@+id/img_runtime"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/mov_data_language"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_view_runtime"
                android:src="@drawable/ic_d_access_time_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/img_language" />

            <ImageView
                android:id="@+id/img_language"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/mov_data_status"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_view_language"
                android:src="@drawable/ic_d_translate_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/img_status" />

            <ImageView
                android:id="@+id/img_status"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/image_view_status"
                android:src="@drawable/ic_d_tv_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mov_data_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_status"
                android:ellipsize="end"
                android:text="@string/status"
                app:layout_constraintBottom_toBottomOf="@+id/img_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mov_data_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_language"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:text="@string/original_language"
                app:layout_constraintBottom_toBottomOf="@+id/img_language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/mov_data_status" />

            <TextView
                android:id="@+id/mov_data_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_runtime"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:text="@string/runtime"
                app:layout_constraintBottom_toBottomOf="@+id/img_runtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/mov_data_language" />

            <TextView
                android:id="@+id/mov_data_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_budget"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:text="@string/budget"
                app:layout_constraintBottom_toBottomOf="@+id/img_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/mov_data_runtime" />

            <TextView
                android:id="@+id/mov_data_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_revenue"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:text="@string/revenue"
                app:layout_constraintBottom_toBottomOf="@+id/img_revenue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/mov_data_budget" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="-12dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="26dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView_genre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_columnWeight="2"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_rowWeight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/mov_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/genres"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mov_data_genres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mov_genres"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/genres"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mov_genres" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_columnWeight="2"
        app:layout_constraintTop_toBottomOf="@+id/CardView_genre"
        app:layout_rowWeight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/mov_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/overview"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mov_data_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mov_overview"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLength="500"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mov_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>